# snake

./: Main.hs  Makefile  README.md  cabal.project  flake.nix  miso-snake.cabal
.github/workflows/: main.yml
static/: index.html
